added delete skill button

--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -8,5 +8,8 @@
 <body>
     <h3><%= skill.skill %></h3>
     <h3>Complete: <%= skill.done ? 'Yes' : 'No' %></h3>
+    <form action="/skills/<%= skill.id %>?_method=DELETE" method="POST">
+        <button type="submit">Delete Skill</button>
+    </form>
 </body>
 </html>
